Update 'GUEST' to 'AWAY'

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             </div>
          </div>
          <div class="board">
-            <h3 class="board-title-home">GUEST</h3>
+            <h3 class="board-title-home">AWAY</h3>
             <div id="guest-score" class="score-board"></div>
             <div class="add-points-btn-group">
                <div class="add-points-btn" onclick="plusOneGuest()">+1</div>
