--- a/index.html
+++ b/index.html
@@ -10,22 +10,25 @@
    </head>
    <body>
       <div class="container">
-         <div class="board">
-            <h3 class="board-title-home">HOME</h3>
-            <div id="home-score" class="score-board"></div>
-            <div class="add-points-btn-group">
-               <div class="add-points-btn" onclick="plusOneHome()">+1</div>
-               <div class="add-points-btn" onclick="plusTwoHome()">+2</div>
-               <div class="add-points-btn" onclick="plusThreeHome()">+3</div>
+         <div class="board-wrapper">
+            <div class="board">
+               <h3 class="board-title-home">HOME</h3>
+               <div id="home-score" class="score-board"></div>
+               <div class="add-points-btn-group">
+                  <div class="add-points-btn" onclick="plusOneHome()">+1</div>
+                  <div class="add-points-btn" onclick="plusTwoHome()">+2</div>
+                  <div class="add-points-btn" onclick="plusThreeHome()">+3</div>
+               </div>
             </div>
-         </div>
-         <div class="board">
-            <h3 class="board-title-home">AWAY</h3>
-            <div id="guest-score" class="score-board"></div>
-            <div class="add-points-btn-group">
-               <div class="add-points-btn" onclick="plusOneGuest()">+1</div>
-               <div class="add-points-btn" onclick="plusTwoGuest()">+2</div>
-               <div class="add-points-btn" onclick="plusThreeGuest()">+3</div>
+            <button id="restart-btn" onclick="restart()">Restart</button>
+            <div class="board">
+               <h3 class="board-title-home">AWAY</h3>
+               <div id="guest-score" class="score-board"></div>
+               <div class="add-points-btn-group">
+                  <div class="add-points-btn" onclick="plusOneGuest()">+1</div>
+                  <div class="add-points-btn" onclick="plusTwoGuest()">+2</div>
+                  <div class="add-points-btn" onclick="plusThreeGuest()">+3</div>
+               </div>
             </div>
          </div>
       </div>
